appId: com.dabri
name: Dark Mode Toggle
---
- launchApp
- tapOn:
    id: "settings-button"
- tapOn:
    text: "מצב כהה"
- back
