appId: com.dabri
name: Silence Timeout Setting
---
- launchApp
- tapOn:
    id: "settings-button"
- tapOn:
    text: "זמן שתיקה"
- assertVisible:
    text: "שנ"
